--- a/app/views/pages/_artyam.html.erb
+++ b/app/views/pages/_artyam.html.erb
@@ -2,13 +2,15 @@
 
 	<div class="modal-content">
 
+		<span class="dismiss-modal">X</span>
+
 		<section>
 
 			<header>ArtYam</header>
 
 			<%= link_to "http://ArtYam.com", "http://artyam.com", target: :_blank %>
-
-			<span class="dismiss-modal">X</span>
+			<br>
+			<%= link_to "ArtYam Artwork Listing", "http://www.artyam.com/9832", target: :_blank %>
 
 			<br>
 
