--- a/app/views/pages/_hiro_asian_kitchen.html.erb
+++ b/app/views/pages/_hiro_asian_kitchen.html.erb
@@ -14,13 +14,14 @@
 
 			<div class="text-content">
 
-				<p>HiroAsianKitchen is a brick and morter restaurant I did some ... .</p>
+				<p>HiroAsianKitchen is a brick and mortar restaurant for which I did a total redesign of their website (which was previously not mobile responsive or considered </p>
 
 				<p>Key Features:</p>
 
 				<ul>
 					<li>Mobile-responsive Design</li>
-					<li>Semantic HTML5</li>
+					<li>Payment Processing/eCommerce</li>
+					<li>Extensively A/B tested layout to optimize for conversion to reservations.</li>
 
 				</ul>
 
