--- a/app/views/pages/_home_contact.html.erb
+++ b/app/views/pages/_home_contact.html.erb
@@ -1,15 +1,17 @@
 
 <section id="contact" class="reveal-panel" id="contact" style="display: none;">
 
+	<header>Contact</header>
+
 	<div class="text-content">
 
-		<header>Contact</header>
+		<p>Thanks for checking out my site. Need help with an upcoming project or application? Feel free to get in contact with me through any of the channels listed below.</p>
 
-	</div>
-
-	<div class="image-content">
-
-		<%= image_tag 'shane_randolph_photo.jpg', class:'home-main-image'%>
+		<%= link_to "Email", "mailto:r.shane.randolph@gmail.com?Subject=Hi Shane", target: :_top  %>
+		<br>
+		<%= link_to "GitHub", "https://github.com/randolrs", target: :_blank  %>
+		<br>
+		<%= link_to "Twitter", "https://twitter.com/RShaneRandolph", target: :_blank  %>
 
 	</div>
 
