--- a/app/views/pages/_servmanity.html.erb
+++ b/app/views/pages/_servmanity.html.erb
@@ -14,14 +14,16 @@
 
 			<div class="text-content">
 
-				<p>Servmanity is an on-demand home services marketplace.</p>
+				<p>Servmanity is an on-demand home services marketplace. The application matches mobile professionals with customers in real-time based on location, availability, service category, and price.</p>
 
 				<p>Key Features:</p>
 
 				<ul>
+					<li>Real-time matching using AJAX</li>
 					<li>Payment Processing</li>
 					<li>Mobile-responsive Design</li>
-					<li>Mobile-responsive Design</li>
+					<li>Geocoding (Google Maps API)</li>
+					<li>User onboarding based on A/B testing and user feedback</li>
 
 				</ul>
 
