--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,6 +32,10 @@
 
 </div>
 
+<div class="fixed-nav-offset mobile-only">
+
+</div>
+
 <div class="right-block">
 	
 	<%= render 'pages/home_welcome' %>
