--- a/app/assets/stylesheets/media_queries.css.scss
+++ b/app/assets/stylesheets/media_queries.css.scss
@@ -12,8 +12,8 @@
 				display: none !important;
 			}
 
-			.full-screen-only{
-				display: inherit !important;
+			.hide-on-mobile{
+				display: inline-block;
 			}
 
 			.content, .content-container{
@@ -24,16 +24,26 @@
 				margin-bottom: -20px;
 			}
 
+			.dismiss-modal{
+				position: fixed;
+    			
+			}
+
+			.modal-container{
+				position: absolute;
+				top:0px;
+			}
+
 			.main-container{
 
 				top: 0 !important;
 		    	left: 0 !important;
 		    	width: auto !important;
-		    	position: fixed;
+		    	position: relative;
 
 
 				.left-block{
-				    position: absolute;
+				    position: fixed;
 				    top: 0;
 				    bottom: 0;
 				    left: 0;
@@ -44,7 +54,7 @@
 				    box-shadow: 0 0 4px #e5e5e5;
 				    overflow: hidden;
 				    padding-top: 5vh;
-				    height: inherit;
+				    height: 100%;
 				    right: inherit;
 
 				    border-width: 0px 3px 0px 0px;
@@ -115,13 +125,13 @@
 				}
 
 				.right-block{
-					position: absolute;
+					position: relative;
 				    top: 0;
-				    left: 200px;
+				    margin-left: 200px;
 				    bottom: 0;
 				    right: 0;
-				    width: 85vw;
-				    max-width: 1200px;
+				    width: inherit;
+				    max-width: 1000px;
 
 
 				    section{
@@ -129,7 +139,7 @@
 				    	
 
 				    	.text-content{
-				    		width: 40vw;
+				    		width: 65%;
 						    display: inline-block;
 						    vertical-align: top;
 						    padding: 0 3vw;
@@ -137,7 +147,7 @@
 				    	}
 
 				    	.image-content{
-						    width: 30vw;
+						    width: 34%;
 						    display: inline-block;
 						    vertical-align: top;
 						    max-width: 350px;
