--- a/app/views/pages/_home_marketing.html.erb
+++ b/app/views/pages/_home_marketing.html.erb
@@ -3,54 +3,55 @@
 
 	<header>Marketing</header>
 
-	<div class="text-content">
+	<div>
+		<div class="text-content">
 
-		<p>I have worked with software startups, eCommerce stores, and brick and mortar businesses to market their products online.  My areas of marketing expertise include growing social media presence, search engine optimization (SEO), user acquisition and conversion, and copywriting.</p>
+			<p>I have worked with software startups, eCommerce stores, and brick and mortar businesses to market their products online.  My areas of marketing expertise include growing social media presence, search engine optimization (SEO), user acquisition and conversion, and copywriting.</p>
 
-		<p>I guess I should also mention that I have a B.S. in Business and an M.A. in Economics from a <%= link_to "pretty good business school", "http://miamioh.edu/fsb/", target: :_blank %>.</p>
+			<p>I guess I should also mention that I have a B.S. in Business and an M.A. in Economics from a <%= link_to "pretty good business school", "http://miamioh.edu/fsb/", target: :_blank %>.</p>
 
-		<p>Check out some of my previous marketing clients to the right or continue below to contact me.</p>
+			<p>Check out some of my previous marketing clients to the right or continue below to contact me.</p>
 
-		<br>
+		</div>
 
-		<a class="button blue-background click-to-reveal" data-reveal-panel-id="contact">Go to my Contact Page <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></a>
+		<div class="image-content">
 
-	</div>
+			<!-- <div class="centered">
 
-	<div class="image-content">
+				<ul class="" id="rig">
 
-		<div class="centered">
+					<li>
+						<a class="rig-cell" href="<%= root_path %>">
 
-			<ul class="" id="rig">
+						<%# image_tag 'sublime_text_photo.PNG', class:'rig-img'%>
+				        
+				        <span class="rig-overlay"></span>
+				        
+				        <span class="rig-text">ArtYam</span>
 
-				<li>
-					<a class="rig-cell" href="<%= root_path %>">
+					    </a>
+					</li>
 
-					<%= image_tag 'sublime_text_photo.PNG', class:'rig-img'%>
-			        
-			        <span class="rig-overlay"></span>
-			        
-			        <span class="rig-text">ArtYam</span>
+					<li>
+						<a class="rig-cell" href="<%= root_path %>">
 
-				    </a>
-				</li>
+						<%# image_tag 'sublime_text_photo.PNG', class:'rig-img'%>
+				        
+				        <span class="rig-overlay"></span>
+				        
+				        <span class="rig-text">Servmanity</span>
 
-				<li>
-					<a class="rig-cell" href="<%= root_path %>">
+					    </a>
+					</li>
 
-					<%= image_tag 'sublime_text_photo.PNG', class:'rig-img'%>
-			        
-			        <span class="rig-overlay"></span>
-			        
-			        <span class="rig-text">Servmanity</span>
+				</ul>
 
-				    </a>
-				</li>
-
-			</ul>
+			</div> -->
 
 		</div>
 
 	</div>
+
+	<%= render :partial => 'pages/next_page_cta', :locals => {:page_id => "contact", :cta_text => "Go to my Contact Page"} %>
 
 </section>
