--- a/app/views/pages/_home_welcome.html.erb
+++ b/app/views/pages/_home_welcome.html.erb
@@ -2,23 +2,24 @@
 <section class="reveal-panel" id="welcome">
 
 	<header>Hello!</header>
+	
+	<div>
+		<div class="text-content">
 
-	<div class="text-content">
+			<p>I am Shane Randolph, an economist turned web developer and UI/UX designer based in Montreal. I have worked with companies and teams all over the world assisting with the development, design, and marketing of software and web applications.</p>
 
-		<p>I am Shane Randolph, an economist turned web developer and UI/UX designer based in Montreal. I have worked with companies and teams all over the world assisting with the development, design, and marketing of software and web applications.</p>
+			<p>Need help with an upcoming project or application? Learn a bit more about me and then consider hiring me.</p>
 
-		<p>Need help with an upcoming project or application? Learn a bit more about me and then consider hiring me.</p>
+		</div>
 
-		<br>
+		<div class="image-content">
 
-		<a class="button blue-background click-to-reveal" data-reveal-panel-id="development">See My Development Experience <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span></a>
+			<%= image_tag 'montreal_photo.jpg', class:'home-main-image'%>
+
+		</div>
 
 	</div>
 
-	<div class="image-content">
-
-		<%= image_tag 'montreal_photo.jpg', class:'home-main-image'%>
-
-	</div>
+	<%= render :partial => 'pages/next_page_cta', :locals => {:page_id => "development", :cta_text => "See My Development Experience"} %>
 
 </section>
