--- a/app/views/pages/_home_design.html.erb
+++ b/app/views/pages/_home_design.html.erb
@@ -39,7 +39,7 @@
 				        
 				        <span class="rig-overlay"></span>
 				        
-				        <span class="rig-text">HiroAsianKitchen</span>
+				        <span class="rig-text">Hiro</span>
 
 					    </a>
 					</li>
