--- a/app/assets/stylesheets/modal.css.scss
+++ b/app/assets/stylesheets/modal.css.scss
@@ -20,8 +20,8 @@
 	position: absolute;
     top: 20px;
     right: 20px;
-    background: #999;
-    color: #222;
+    background: #F00000;
+    color: #fff;
     font-size: 20px;
     border-radius: 50%;
     width: 50px;
