--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -3,6 +3,98 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body{
+	
+	.home-background{
+
+		position: fixed;
+		left: 0px;
+		right:0px;
+		top:0px;
+		bottom: 0px;
+
+		background-image: url(earth-at-night.jpg);
+
+		.home-background-overlay{
+			position: fixed;
+			left: 0px;
+			right:0px;
+			top:0px;
+			bottom: 0px;
+			background: rgba(0,0,0,0.4);
+		}
+
+		.home-landing{
+			background-size: cover;
+		    background-position: 50%;
+		    position: relative;
+		    float: none;
+		    width: 100%;
+		    height: 100%;
+		    z-index: 0;
+
+		    .home-title{
+		    	color: #fff;
+			    z-index: 1;
+			    vertical-align: middle;
+			    margin-top: 100px;
+			    text-align: center;
+			    padding: 20px;
+
+			    .home-initials{
+
+			    	display: inline-block;
+			    	margin: 0 auto;
+			    	padding: 10px;
+			    	text-align: center;
+			    	border: 2px solid #fff;
+			    	transform: rotate(45deg);
+			    	height: 100px;
+			    	width: 100px;
+
+			    	p.initials{
+
+			    		transform: rotate(-45deg);
+					    font-size: 40px;
+					    font-weight: 100;
+
+					    font-size: 40px;
+					    font-weight: 100;
+					    display: inline-block;
+					    width: 80px;
+					    height: 80px;
+					    line-height: 80px;
+			    	}
+			    }
+
+			    h1{
+
+			    	font-size: 40px;
+			    }
+
+			    h2{
+			    	font-size: 30px;
+			    }
+
+			    .action-container{
+
+			    	display: inline-block;
+			    	
+
+			    	.action-button{
+			    		display: inline-block;
+			    		width: 200px;
+			    		padding: 20px;
+			    		cursor: pointer;
+			    		color: #fff;
+			    	}
+			    }
+		    }
+
+		}
+
+	}
+
+
 
 	a:hover{
 		text-decoration: none;
