--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,8 @@
 
 		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 
+		<link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
+
 	  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="theme-color" content="#000000">
 
@@ -23,15 +25,8 @@
 	<body>
 
 <!-- 		Thanks for taking a look at my code; I'm flattered.  I started learning web design by spending hours in the explorer. -->
-
-		<div class="main-container">
-			
-				
-				<%= yield %>
-
-			<%# render 'layouts/footer' %>
-
-		</div>
+					
+		<%= yield %>
 
 	</body>
 
