--- a/app/views/pages/new_home.html.erb
+++ b/app/views/pages/new_home.html.erb
@@ -1,42 +1,40 @@
+<%= render 'layouts/header_nav' %>
+
 <div class="home-background">
-	
-	<div class="home-background-overlay">
 
-		<div class="home-landing">
+	<div class="home-landing">
 
-			<div class="home-title">
+		<div class="home-title">
 
-				<div class="home-initials">
+			<div class="home-initials">
 
-					<p class="initials">SR</p>
-				</div>
+				<p class="initials">SR</p>
+			</div>
 
 
-				<h1>Shane Randolph</h1>
+			<h1>Shane Randolph</h1>
 
-				<h2>Web Developer</h2>
+			<h2>Web Developer</h2>
 
-				<nav class="action-container">
+			<nav class="action-container">
 
-					<a class="action-button">
-						<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
-						<br>
-						ABOUT
-					</a>
+				<a class="action-button reveal-slide-down" data-slide-down-panel-id="about">
+					<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+					<br>
+					ABOUT
+				</a>
 
-					<a class="action-button">
-						<span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
-						<br>
-						PROJECT
-					</a>
+				<a class="action-button reveal-slide-down" data-slide-down-panel-id="projects">
+					<span class="glyphicon glyphicon-briefcase" aria-hidden="true"></span>
+					<br>
+					PROJECTS
+				</a>
 
-					<a class="action-button">
-						<span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-						<br>
-						CONTACT
-					</a>
-
-				</div>
+				<a class="action-button reveal-slide-down" data-slide-down-panel-id="contact">
+					<span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+					<br>
+					CONTACT
+				</a>
 
 			</div>
 
@@ -45,4 +43,49 @@
 	</div>
 
 </div>
+
+<section class="nav-main-option slide-down-panel" id="about">
+
+
+	<div class="main-option-content">
+
+		<header>About</header>
+		
+		<h3>Get in touch</h3>
+
+		XXYYZZZ
+
+	</div>
+
+</section>
+
+<section class="nav-main-option slide-down-panel" id="projects">
+
+
+	<div class="main-option-content">
+
+		<header>Projects</header>
+		
+		<h3>Get in touch</h3>
+
+		XXYYZZZ
+
+	</div>
+
+</section>
+
+<section class="nav-main-option slide-down-panel" id="contact">
+
+
+	<div class="main-option-content">
+
+		<header>Contact Me</header>
+		
+		<h3>Get in touch</h3>
+
+		XXYYZZZ
+
+	</div>
+
+</section>
 
