--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,7 +29,7 @@ html, body{
   	height:100%;
   	width:100%;
 
-  	font-family: 'Roboto', sans-serif;
+  	font-family: 'Oxygen', sans-serif !important;
   	font-size: 18px;
     
  	
