--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -413,3 +413,13 @@ img.blurred{
 .home-nav.hidden{
 	display: none;
 }
+
+
+.glyphicon.top-right-x{
+	position: absolute;
+    right: 20px;
+    top: 20px;
+    font-size: 30px;
+    color: #666;
+    cursor: pointer;
+}
