--- a/app/views/layouts/_header_nav.html.erb
+++ b/app/views/layouts/_header_nav.html.erb
@@ -1,6 +1,6 @@
 <div class="home-nav hidden">
 
-	<a class="action-button reveal-slide-down">Home</a>
+	<a class="action-button reveal-slide-down hide-nav">Home</a>
 
 	<a class="action-button reveal-slide-down" data-slide-down-panel-id="about">About</a>
 
