--- a/app/views/pages/new_home.html.erb
+++ b/app/views/pages/new_home.html.erb
@@ -46,7 +46,8 @@
 
 <section class="nav-main-option slide-down-panel" id="about">
 
-
+	<span class="glyphicon glyphicon-remove hide-parent hide-nav top-right-x" aria-hidden=true></span>
+	
 	<div class="main-option-content">
 
 		<header>About</header>
@@ -61,6 +62,7 @@
 
 <section class="nav-main-option slide-down-panel" id="projects">
 
+	<span class="glyphicon glyphicon-remove hide-parent hide-nav top-right-x" aria-hidden=true></span>
 
 	<div class="main-option-content">
 
@@ -76,6 +78,7 @@
 
 <section class="nav-main-option slide-down-panel" id="contact">
 
+	<span class="glyphicon glyphicon-remove hide-parent hide-nav top-right-x" aria-hidden=true></span>
 
 	<div class="main-option-content">
 
