--- a/app/views/pages/new_home.html.erb
+++ b/app/views/pages/new_home.html.erb
@@ -47,14 +47,41 @@
 <section class="nav-main-option slide-down-panel" id="about">
 
 	<span class="glyphicon glyphicon-remove hide-parent hide-nav top-right-x" aria-hidden=true></span>
-	
+
 	<div class="main-option-content">
 
-		<header>About</header>
-		
-		<h3>Get in touch</h3>
+		<div class="centered">
 
-		XXYYZZZ
+			<%= image_tag 'shane_randolph_photo.jpg', class:'about-image'%>
+		
+		</div>
+
+		<header>Shane Randolph</header>
+
+		<h3>Web Developer</h3>
+
+		<h4>About Me</h4>
+
+		<div class="row">
+
+			<div class="col-xs-12 col-sm-6">
+
+				<p>I am Shane Randolph, an economist turned web developer and UI/UX designer based in Montreal. I have worked with companies and teams all over the world assisting with the development, design, and marketing of software and web applications.</p>
+
+				<p>Need help with an upcoming project or application? Learn a bit more about me and then consider hiring me.</p>
+
+			</div>
+
+
+			<div class="col-xs-12 col-sm-6">
+
+				<p>I am Shane Randolph, an economist turned web developer and UI/UX designer based in Montreal. I have worked with companies and teams all over the world assisting with the development, design, and marketing of software and web applications.</p>
+
+				<p>Need help with an upcoming project or application? Learn a bit more about me and then consider hiring me.</p>
+
+			</div>
+
+		</div>
 
 	</div>
 
@@ -68,9 +95,55 @@
 
 		<header>Projects</header>
 		
-		<h3>Get in touch</h3>
+		<h3>A Sample of My Recent Work</h3>
 
-		XXYYZZZ
+		<br>
+
+		<div class="row centered">
+
+			<div class="col-xs-12 col-sm-6 col-md-3">
+
+				<div class="project-box">
+
+					thatHQ
+
+				</div>
+
+			</div>
+
+			<div class="col-xs-12 col-sm-6 col-md-3">
+
+				<div class="project-box">
+
+					ComedyHere
+
+				</div>
+
+			</div>
+
+			<div class="col-xs-12 col-sm-6 col-md-3">
+
+				<div class="project-box">
+
+					Servmanity
+
+				</div>
+
+			</div>
+
+			<div class="col-xs-12 col-sm-6 col-md-3">
+
+				<div class="project-box">
+
+					ArtYam
+
+				</div>
+
+			</div>
+
+
+		</div>
+
 
 	</div>
 
