--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -371,15 +371,27 @@ img.blurred{
 		max-width: 800px;
 		width: 100%;
 		margin: 0 auto;
+		padding-top: 50px;
 
 		header{
-			margin-top: 35px;
+			margin-bottom: 20px;
 			font-size: 40px;
 			text-align: center;
 		}
 
 		h3{
+			font-size: 24px;
 			text-align:center;
+		}
+
+		h4{
+			font-size: 20px;
+			text-align: center;
+		}
+
+		p{
+			font-size: 18px;
+			margin-bottom: 15px;
 		}
 	}
 }
@@ -422,4 +434,32 @@ img.blurred{
     font-size: 30px;
     color: #666;
     cursor: pointer;
+}
+
+
+.about-image{
+	width: 200px;
+	height: 200px;
+	border-radius: 50%;
+	border: 3px solid #fff;
+	display: inline-block;
+	margin: 0 auto;
+	text-align: center;
+}
+
+.project-box{
+	
+	text-align: center;
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+
+    border: 1px solid #ccc;
+
+    cursor: pointer;
+}
+
+.project-box:hover{
+	
+	border: 1px solid #fcc;
 }
