--- a/app/views/pages/new_home.html.erb
+++ b/app/views/pages/new_home.html.erb
@@ -99,51 +99,63 @@
 
 		<br>
 
-		<div class="row centered">
 
-			<div class="col-xs-12 col-sm-6 col-md-3">
+		<div class="centered">
 
-				<div class="project-box">
+			<ul class="" id="rig">
 
-					thatHQ
+				<li>
+					<a class="rig-cell show-modal" data-reveal-panel-id="thatHQ-page">
 
-				</div>
+					<%= image_tag 'that_hq_photo.PNG', class:'rig-img'%>
+			        
+			        <span class="rig-overlay"></span>
+			        
+			        <span class="rig-text">thatHQ</span>
 
-			</div>
+				    </a>
+				</li>
 
-			<div class="col-xs-12 col-sm-6 col-md-3">
+				<li>
+					<a class="rig-cell show-modal" data-reveal-panel-id="comedyhere-page">
 
-				<div class="project-box">
+					<%= image_tag 'comedy_here_photo.PNG', class:'rig-img'%>
+			        
+			        <span class="rig-overlay"></span>
+			        
+			        <span class="rig-text">ComedyHere</span>
 
-					ComedyHere
+				    </a>
+				</li>
 
-				</div>
+				<li>
+					<a class="rig-cell show-modal" data-reveal-panel-id="servmanity-page">
 
-			</div>
+					<%= image_tag 'servmanity_photo.PNG', class:'rig-img'%>
+			        
+			        <span class="rig-overlay"></span>
+			        
+			        <span class="rig-text">Servmanity</span>
 
-			<div class="col-xs-12 col-sm-6 col-md-3">
+				    </a>
+				</li>
 
-				<div class="project-box">
 
-					Servmanity
+				<li>
+					<a class="rig-cell show-modal" data-reveal-panel-id="artyam-page">
 
-				</div>
+					<%= image_tag 'artyam_photo.PNG', class:'rig-img'%>
+			        
+			        <span class="rig-overlay"></span>
+			        
+			        <span class="rig-text">ArtYam</span>
 
-			</div>
+				    </a>
+				</li>
 
-			<div class="col-xs-12 col-sm-6 col-md-3">
-
-				<div class="project-box">
-
-					ArtYam
-
-				</div>
-
-			</div>
-
+			</ul>
 
 		</div>
-
 
 	</div>
 
