--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -371,7 +371,7 @@ img.blurred{
 		max-width: 800px;
 		width: 100%;
 		margin: 0 auto;
-		padding-top: 50px;
+		padding: 50px 0px;
 
 		header{
 			margin-bottom: 20px;
@@ -382,11 +382,13 @@ img.blurred{
 		h3{
 			font-size: 24px;
 			text-align:center;
+			margin-bottom: 16px;
 		}
 
 		h4{
 			font-size: 20px;
 			text-align: center;
+			margin-bottom: 10px;
 		}
 
 		p{
