--- a/app/views/pages/new_home.html.erb
+++ b/app/views/pages/new_home.html.erb
@@ -107,7 +107,7 @@
 				<li>
 					<a class="rig-cell show-modal" data-reveal-panel-id="thatHQ-page">
 
-					<%= image_tag 'that_hq_photo.PNG', class:'rig-img'%>
+					<%= image_tag 'that_hq_photo.png', class:'rig-img'%>
 			        
 			        <span class="rig-overlay"></span>
 			        
