--- a/app/views/pages/new_home.html.erb
+++ b/app/views/pages/new_home.html.erb
@@ -44,136 +44,8 @@
 
 </div>
 
-<section class="nav-main-option slide-down-panel" id="about">
+<%= render 'pages/about' %>
 
-	<span class="glyphicon glyphicon-remove hide-parent hide-nav top-right-x" aria-hidden=true></span>
+<%= render 'pages/projects' %>
 
-	<div class="main-option-content">
-
-		<div class="centered">
-
-			<%= image_tag 'shane_randolph_photo.jpg', class:'about-image'%>
-		
-		</div>
-
-		<header>Shane Randolph</header>
-
-		<h3>Web Developer</h3>
-
-		<h4>About Me</h4>
-
-		<div class="row">
-
-			<div class="col-xs-12 col-sm-6">
-
-				<p>I am Shane Randolph, an economist turned web developer and UI/UX designer based in Montreal. I have worked with companies and teams all over the world assisting with the development, design, and marketing of software and web applications.</p>
-
-				<p>Need help with an upcoming project or application? Learn a bit more about me and then consider hiring me.</p>
-
-			</div>
-
-
-			<div class="col-xs-12 col-sm-6">
-
-				<p>I am Shane Randolph, an economist turned web developer and UI/UX designer based in Montreal. I have worked with companies and teams all over the world assisting with the development, design, and marketing of software and web applications.</p>
-
-				<p>Need help with an upcoming project or application? Learn a bit more about me and then consider hiring me.</p>
-
-			</div>
-
-		</div>
-
-	</div>
-
-</section>
-
-<section class="nav-main-option slide-down-panel" id="projects">
-
-	<span class="glyphicon glyphicon-remove hide-parent hide-nav top-right-x" aria-hidden=true></span>
-
-	<div class="main-option-content">
-
-		<header>Projects</header>
-		
-		<h3>A Sample of My Recent Work</h3>
-
-		<br>
-
-
-		<div class="centered">
-
-			<ul class="" id="rig">
-
-				<li>
-					<a class="rig-cell show-modal" data-reveal-panel-id="thatHQ-page">
-
-					<%= image_tag 'that_hq_photo.png', class:'rig-img'%>
-			        
-			        <span class="rig-overlay"></span>
-			        
-			        <span class="rig-text">thatHQ</span>
-
-				    </a>
-				</li>
-
-				<li>
-					<a class="rig-cell show-modal" data-reveal-panel-id="comedyhere-page">
-
-					<%= image_tag 'comedy_here_photo.PNG', class:'rig-img'%>
-			        
-			        <span class="rig-overlay"></span>
-			        
-			        <span class="rig-text">ComedyHere</span>
-
-				    </a>
-				</li>
-
-				<li>
-					<a class="rig-cell show-modal" data-reveal-panel-id="servmanity-page">
-
-					<%= image_tag 'servmanity_photo.PNG', class:'rig-img'%>
-			        
-			        <span class="rig-overlay"></span>
-			        
-			        <span class="rig-text">Servmanity</span>
-
-				    </a>
-				</li>
-
-
-				<li>
-					<a class="rig-cell show-modal" data-reveal-panel-id="artyam-page">
-
-					<%= image_tag 'artyam_photo.PNG', class:'rig-img'%>
-			        
-			        <span class="rig-overlay"></span>
-			        
-			        <span class="rig-text">ArtYam</span>
-
-				    </a>
-				</li>
-
-			</ul>
-
-		</div>
-
-	</div>
-
-</section>
-
-<section class="nav-main-option slide-down-panel" id="contact">
-
-	<span class="glyphicon glyphicon-remove hide-parent hide-nav top-right-x" aria-hidden=true></span>
-
-	<div class="main-option-content">
-
-		<header>Contact Me</header>
-		
-		<h3>Get in touch</h3>
-
-		XXYYZZZ
-
-	</div>
-
-</section>
-
+<%= render 'pages/contact' %>
