--- a/app/views/pages/_artyam.html.erb
+++ b/app/views/pages/_artyam.html.erb
@@ -8,26 +8,21 @@
 
 			<header>ArtYam</header>
 
-			<%= link_to "http://ArtYam.com", "http://artyam.com", target: :_blank %>
-			<br>
-			<%= link_to "ArtYam Artwork Listing", "http://www.artyam.com/9832", target: :_blank %>
+			<p>ArtYam is a subscription software-as-a-service eCommerce platform for fine arts galleries and artists. ArtYam makes public artwork displays more profitable by creating responsive, eCommerce-enabled web pages that can be accessed by prospective art buyers via short, human-readable URLs and QR codes.</p>
 
-			<br>
+			<p>URL: <%= link_to "http://ArtYam.com", "http://artyam.com", target: :_blank %></p>
+			
+			<p>Design Example: <%= link_to "ArtYam Artwork Listing", "http://www.artyam.com/9832", target: :_blank %></p>
 
-			<div class="text-content">
+			<p><b>Technical Features:</b></p>
 
-				<p>ArtYam is a subscription software-as-a-service eCommerce platform for fine arts galleries and artists. ArtYam makes public artwork displays more profitable by creating responsive, eCommerce-enabled web pages that can be accessed by prospective art buyers via short, human-readable URLs and QR codes.</p>
 
-				<p>Key Features:</p>
+			<ul class="features">
+				
+				<li>Payment Processing (Stripe API)</li>
+				<li>Mobile-responsive Design</li>
 
-				<ul>
-					<li>Payment Processing</li>
-					<li>Mobile-responsive Design</li>
-					<li>Mobile-responsive Design</li>
-
-				</ul>
-
-			</div>
+			</ul>
 
 		</section>
 	
