--- a/app/views/pages/_projects.html.erb
+++ b/app/views/pages/_projects.html.erb
@@ -73,3 +73,9 @@
 </section>
 
 <%= render 'pages/comedyhere' %>
+
+<%= render 'pages/artyam' %>
+
+<%= render 'pages/servmanity' %>
+
+<%= render 'pages/thathq' %>
