--- a/app/views/pages/_servmanity.html.erb
+++ b/app/views/pages/_servmanity.html.erb
@@ -2,32 +2,28 @@
 
 	<div class="modal-content">
 
+		<span class="dismiss-modal">X</span>
+
+
 		<section>
 
 			<header>Servmanity</header>
 
-			<%= link_to "http://Servmanity.com", "http://servmanity.com", target: :_blank %>
+			<p>Servmanity is an on-demand home services marketplace. The application matches mobile professionals with customers in real-time based on location, availability, service category, and price.</p>
 
-			<span class="dismiss-modal">X</span>
+			<p>URL: <%= link_to "http://Servmanity.com", "http://servmanity.com", target: :_blank %></p>
 
-			<br>
+			<p><b>Technical Features:</b></p>
 
-			<div class="text-content">
+			<ul class="features">
+				
+				<li>Real-time matching using AJAX</li>
+				<li>Payment Processing(Stripe Connect API)</li>
+				<li>Mobile-responsive Design</li>
+				<li>Geocoding (Google Maps API)</li>
+				<li>User onboarding based on A/B testing and user feedback</li>
 
-				<p>Servmanity is an on-demand home services marketplace. The application matches mobile professionals with customers in real-time based on location, availability, service category, and price.</p>
-
-				<p>Key Features:</p>
-
-				<ul>
-					<li>Real-time matching using AJAX</li>
-					<li>Payment Processing</li>
-					<li>Mobile-responsive Design</li>
-					<li>Geocoding (Google Maps API)</li>
-					<li>User onboarding based on A/B testing and user feedback</li>
-
-				</ul>
-
-			</div>
+			</ul>
 
 		</section>
 	
