--- a/app/views/pages/_about.html.erb
+++ b/app/views/pages/_about.html.erb
@@ -14,7 +14,9 @@
 
 		<h3>Web Developer</h3>
 
-		<h4>About Me</h4>
+		<br>
+
+		<h4><b>About Me</b></h4>
 
 		<br>
 
@@ -22,22 +24,38 @@
 
 			<div class="col-xs-12 col-sm-6">
 
-				<p>I am Shane Randolph, an economist turned web developer and UI/UX designer based in Montreal. I have worked with companies and teams all over the world assisting with the development, design, and marketing of software and web applications.</p>
+				<p>Hello! I am Shane Randolph, an economist turned web developer and UI/UX designer based in Montreal. I have worked with companies and teams all over the world assisting with the development, design, and marketing of software and web applications.</p>
 
-				<p>Need help with an upcoming project or application? Learn a bit more about me and then consider hiring me.</p>
+				<p>I develop full-featured web applications, including eCommerce, marketplace, social media, and geolocation-enabled directory applications.</p>
 
 			</div>
 
 
 			<div class="col-xs-12 col-sm-6">
 
-				<p>I am Shane Randolph, an economist turned web developer and UI/UX designer based in Montreal. I have worked with companies and teams all over the world assisting with the development, design, and marketing of software and web applications.</p>
+				<p>I create responsive, mobile-first designs using front-end frameworks, including <%= link_to "MeteorJS", "https://meteor.com", target: :_blank %>, <%= link_to "AngularJS", "https://angular.io", target: :_blank %>, <%= link_to "Bootstrap", "http://getbootstrap.com", target: :_blank %>, <%= link_to "JQuery", "https://jquery.com", target: :_blank %>, and old-fashioned, handwritten (<i>gasp!</i>) CSS media queries.</p>
+
+				<p>I guess I should also mention that I have a B.S. in Business and an M.A. in Economics from a <%= link_to "pretty good business school", "http://miamioh.edu/fsb/", target: :_blank %>.</p>
 
 				<p>Need help with an upcoming project or application? Learn a bit more about me and then consider hiring me.</p>
 
 			</div>
 
 		</div>
+
+		<br>
+
+		<h4><b>Technology I use</b></h4>
+		
+		<div class="stack-container">
+
+			Ruby, etc.
+
+		</div>
+
+		<br>
+
+		<h5 class="centered">If you want to learn about my recent projects, <a class="action-button reveal-slide-down" data-slide-down-panel-id="projects">Click Here</a></h5>
 
 	</div>
 
