--- a/app/views/pages/_projects.html.erb
+++ b/app/views/pages/_projects.html.erb
@@ -68,6 +68,10 @@
 
 		</div>
 
+		<br>
+		
+		<h5 class="centered">If you want to get in touch with me, <a class="action-button reveal-slide-down" data-slide-down-panel-id="contact">Contact Me</a></h5>
+
 	</div>
 
 </section>
