--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -466,3 +466,11 @@ img.blurred{
 	
 	border: 1px solid #fcc;
 }
+
+
+.stack-container{
+	padding: 20px;
+	border-top: 2px solid #333;
+	border-bottom: 2px solid #333;	
+	margin-bottom: 30px;
+}
