--- a/app/views/pages/_about.html.erb
+++ b/app/views/pages/_about.html.erb
@@ -49,7 +49,52 @@
 		
 		<div class="stack-container">
 
-			Ruby, etc.
+			<div class="row">
+
+				<div class="col-xs-4 col-sm-2">
+
+					<a class="color-square">Ruby</a>
+
+				</div>
+
+				<div class="col-xs-4 col-sm-2">
+
+					<a class="color-square">SASS</a>
+					
+
+				</div>
+
+				<div class="col-xs-4 col-sm-2">
+
+					<a class="color-square">ReactJS</a>
+					
+
+				</div>
+
+				<div class="col-xs-4 col-sm-2">
+
+					<a class="color-square">HTML5</a>
+					
+
+				</div>
+
+				<div class="col-xs-4 col-sm-2">
+
+					<a class="color-square">jQuery</a>
+					
+
+				</div>
+
+				<div class="col-xs-4 col-sm-2">
+
+					<a class="color-square">Javascript</a>
+					
+
+				</div>
+
+
+			</div>
+
 
 		</div>
 
