--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -473,4 +473,18 @@ img.blurred{
 	border-top: 2px solid #333;
 	border-bottom: 2px solid #333;	
 	margin-bottom: 30px;
+
+	text-align: center;
+
+	.color-square{
+		display: inline-block;
+		width: 70px;
+		height: 70px;
+		line-height: 70px;
+
+		background: #111;
+		color: #fff;
+
+		margin: 10px 0px;
+	}
 }
