--- a/app/views/pages/_about.html.erb
+++ b/app/views/pages/_about.html.erb
@@ -33,7 +33,7 @@
 
 			<div class="col-xs-12 col-sm-6">
 
-				<p>I create responsive, mobile-first designs using front-end frameworks, including <%= link_to "MeteorJS", "https://meteor.com", target: :_blank %>, <%= link_to "AngularJS", "https://angular.io", target: :_blank %>, <%= link_to "Bootstrap", "http://getbootstrap.com", target: :_blank %>, <%= link_to "JQuery", "https://jquery.com", target: :_blank %>, and old-fashioned, handwritten (<i>gasp!</i>) CSS media queries.</p>
+				<p>I create responsive, mobile-first designs using front-end frameworks, including <%= link_to "ReactJS", "https://facebook.github.io/react/", target: :_blank %>, <%= link_to "Bootstrap", "http://getbootstrap.com", target: :_blank %>, <%= link_to "JQuery", "https://jquery.com", target: :_blank %>, and old-fashioned, handwritten (<i>gasp!</i>) CSS media queries.</p>
 
 				<p>I guess I should also mention that I have a B.S. in Business and an M.A. in Economics from a <%= link_to "pretty good business school", "http://miamioh.edu/fsb/", target: :_blank %>.</p>
 
