--- a/app/views/pages/_contact.html.erb
+++ b/app/views/pages/_contact.html.erb
@@ -12,11 +12,26 @@
 
 		<p>Thanks for checking out my site. Need help with an upcoming project or application? Feel free to get in contact with me through any of the channels listed below.</p>
 
-		<%= link_to "Email", "mailto:r.shane.randolph@gmail.com?Subject=Hi Shane", target: :_top  %>
-		<br>
-		<%= link_to "GitHub", "https://github.com/randolrs", target: :_blank  %>
-		<br>
-		<%= link_to "Twitter", "https://twitter.com/RShaneRandolph", target: :_blank  %>
+		<div class="row centered">
+
+			<div class="col-xs-4">
+
+				<%= link_to "Email", "mailto:r.shane.randolph@gmail.com?Subject=Hi Shane", target: :_top, class:"color-circle"  %>
+			</div>
+
+			<div class="col-xs-4">
+
+				<%= link_to "GitHub", "https://github.com/randolrs", target: :_blank, class:"color-circle"  %>
+
+			</div>
+
+			<div class="col-xs-4">
+
+				<%= link_to "Twitter", "https://twitter.com/RShaneRandolph", target: :_blank, class:"color-circle"  %>
+
+			</div>
+
+		</div>
 
 	</div>
 
