--- a/app/views/pages/_about.html.erb
+++ b/app/views/pages/_about.html.erb
@@ -59,7 +59,7 @@
 
 				<div class="col-xs-4 col-sm-2">
 
-					<a class="color-square">SASS</a>
+					<a class="color-square">SCSS</a>
 					
 
 				</div>
