--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,28 @@
 		<link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
 
 	  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	  	
 		<meta name="theme-color" content="#000000">
 
-		<meta name="description" content="Shane Randolph is a web developer, designer, and marketer based in Montreal.">
+		<meta name="title" content="Shane Randolph | Web Developer">
+
+		<meta name="description" content="Shane Randolph is a web developer that uses data analytics to code, design, and market effective software applications.">
+
+		<% if Rails.env == 'production' %>
+			
+			<script>
+			  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+			  ga('create', 'UA-78629539-1', 'auto');
+			  ga('send', 'pageview');
+
+			</script>
+
+		<%end%>
+
 
 
 	</head>
