add react project

--- a/app/views/pages/_projects.html.erb
+++ b/app/views/pages/_projects.html.erb
@@ -64,6 +64,18 @@
 				    </a>
 				</li>
 
+				<li>
+					<a class="rig-cell show-modal" href="https://github.com/randolrs/react_scoreboard">
+			        
+			        <%= image_tag 'scoreboard_photo.png', class:'rig-img'%>
+
+			        <span class="rig-overlay"></span>
+			        
+			        <span class="rig-text">ReactJS Scoreboard</span>
+
+				    </a>
+				</li>
+
 			</ul>
 
 		</div>
