add cta buttons to project pages

--- a/app/views/pages/_artyam.html.erb
+++ b/app/views/pages/_artyam.html.erb
@@ -10,7 +10,7 @@
 
 			<p>ArtYam is a subscription software-as-a-service eCommerce platform for fine arts galleries and artists. ArtYam makes public artwork displays more profitable by creating responsive, eCommerce-enabled web pages that can be accessed by prospective art buyers via short, human-readable URLs and QR codes.</p>
 
-			<p>URL: <%= link_to "http://ArtYam.com", "http://artyam.com", target: :_blank %></p>
+			<p><%= link_to "Go to ArtYam.com", "http://artyam.com", target: :_blank, class:"button black-background" %></p>
 			
 			<p>Design Example: <%= link_to "ArtYam Artwork Listing", "http://www.artyam.com/9832", target: :_blank %></p>
 
