--- a/app/views/pages/_comedyhere.html.erb
+++ b/app/views/pages/_comedyhere.html.erb
@@ -10,7 +10,7 @@
 
 			<p>ComedyHere is a geocoded directory for recurring and limited engagement comedy shows. The directory is searchable by location and category.</p>
 
-			<p>URL: <%= link_to "http://ComedyHere.com", "http://comedyhere.com/Montreal", target: :_blank %></p>
+			<%= link_to "Go to ComedyHere.com", "http://comedyhere.com/Montreal", target: :_blank, class:"button black-background" %>
 
 			<p>Design Summary: <%= link_to "ComedyHere Show List", "http://www.comedyhere.com/Montr%C3%A9al/comedy/open-mic-at-comedy-works/%201-May-2017/992", target: :_blank %></p>
 
