--- a/app/views/pages/_servmanity.html.erb
+++ b/app/views/pages/_servmanity.html.erb
@@ -11,7 +11,9 @@
 
 			<p>Servmanity is an on-demand home services marketplace. The application matches mobile professionals with customers in real-time based on location, availability, service category, and price.</p>
 
-			<p>URL: <%= link_to "http://Servmanity.com", "http://servmanity.com", target: :_blank %></p>
+			<%= link_to "Go to Servmanity.com", "http://servmanity.com", target: :_blank, class:"button black-background" %>
+
+
 
 			<p><b>Technical Features:</b></p>
 
