--- a/app/views/pages/_thathq.html.erb
+++ b/app/views/pages/_thathq.html.erb
@@ -11,7 +11,7 @@
 
 			<p>thatHQ provides a personalized syllabus of book recommendations based on a collection of best business books I have read.</p>
 
-			<p>URL: <%= link_to "https://thatHQ.com", "https://thatHQ.com", target: :_blank %></p>
+			<p><%= link_to "Go to thatHQ.com", "https://thatHQ.com", target: :_blank, class:"button black-background"  %></p>
 
 			<p><b>Technical Features:</b></p>
 
